Fix small screen layout issues

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,11 +1,10 @@
 .app {
-  background: url('/assets/img/logo.svg') no-repeat center 20px;
-  padding: 80px 20px 20px 20px;
-  text-align: center;
   flex-grow: 0;
-  width: 600px;
+  flex-shrink: 0;
   overflow: auto;
+  width: 500px;
 }
 .console-container {
   flex-grow: 1;
+  width: calc(100vw - 500px);
 }
