--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,9 @@ html, body {
   display: flex;
   height: 100vh;
 }
+
+.page {
+  background: url('/assets/img/logo.svg') no-repeat center 20px;
+  padding: 80px 10px 10px 10px;
+  text-align: center;
+}
